--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ DB_DATABASE=database
 DB_PORT=9996
 DB_USERNAME=root
 DB_PASSWORD=root
+
+API_HOST=http://labs.master.com
+API_METHOD=method
+API_TARGET=target
+API_URL="${API_HOST}${API_METHOD}/${API_TARGET}"
