updates to deloying

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -17,7 +17,7 @@ jobs:
                   server: server.silicacdn.com
                   username: ${{ secrets.ftp_username }}
                   password: ${{ secrets.ftp_password }}
-                  server-dir: /front.silicacdn.com/
+                  server-dir: /back.silicacdn.com/
                   exclude: |
                       **/.git*
                       **/.git*/**
